[package]
name = "game-test"
version = "0.1.0"
authors = ["Pavel Hrách <pavel@hrach.email>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.7.0", features = ["dynamic"] }
rand = { version = "0.8.2", features = ["small_rng"] }